{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Input",
            "id": "a86b56e1-b655-4ac9-b95a-3dd4e7bdee3b",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "916a45a6-c1e0-458d-831e-e240ed0fec0b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "Duck",
                    "type": "Value",
                    "id": "ab22cec0-641e-4c56-a550-f0a0ff03aef9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Hold(duration=1.401298E-45)",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveLeft",
                    "type": "Value",
                    "id": "aa9b5651-2ed3-4f48-9348-e2175c166eb9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveRight",
                    "type": "Value",
                    "id": "5f6cf082-2e73-4d9d-bbb9-f2ea7d875eb8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "57b784eb-f178-4e0d-b49b-4078a58eaedc",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6dc9e230-97ff-4768-a75f-5fc47ead6bed",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Duck",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25efb8a4-d18b-4667-8e7b-83578093c58d",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9bc55daf-fd65-4f7c-b9ef-2f4722fef47a",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}